--- a/index.html
+++ b/index.html
@@ -9,137 +9,148 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-   
+
 </head>
 <body>
-    <header>
-        <nav>
-            <a class="logonav" href="./index.html">Web<span class="studio">Studio</span></a>
-            <ul>
-                <li>
-                    <a class="navlink-text" href="./index.html">Studio</a>
-                </li>
-                <li>
-                    <a class="navlink-text" href="">Portfolio</a>
-                </li>
-                <li>
-                    <a class="navlink-text" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="contacts-info">
-            <ul>
-                <li>
-                    <a class="contact-text" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="contact-text" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+    <header class="main-header">
+        <div class="container flexpos">
+            <nav class="logo-nav flexpos">
+                <a class="logonav" href="./index.html">Web<span class="studio">Studio</span></a>
+                <ul class="nav-list flexpos">
+                    <li class="list-item">
+                        <a class="navlink-text" href="./index.html">Studio</a>
+                    </li>
+                    <li class="list-item">
+                        <a class="navlink-text" href="">Portfolio</a>
+                    </li>
+                    <li class="list-item">
+                        <a class="navlink-text" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="contacts-info flexpos">
+                <ul class="contacts-list flexpos">
+                    <li class="list-item">
+                        <a class="contact-text" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="list-item">
+                        <a class="contact-text" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
-        <section class="hero-section">
-            <h1 class="main-title">Effective Solutions for Your Business</h1>
-            <button class="order-cta" type="button">Order Service</button>
+        <section class="hero-section section">
+            <div class="container hero-content">
+                <h1 class="main-title">Effective Solutions for Your Business</h1>
+                <button class="order-cta" type="button">Order Service</button>
+            </div>
         </section>
-        <section>
-            <h2 class="secondary-title">
-                Team
-            </h2>
-            <ul>
-                <li>
-                    <h3 class="third-order-title">Strategy</h3>
-                    <p class="body-text">
-                    Our goal is to identify the business
-                    problem to walk away with the perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="third-order-title">Punctuality</h3>
-                    <p class="body-text">
-                        Bring the key message to the brand's audience for the best price within the shortest possible time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="third-order-title">Diligence</h3>
-                    <p class="body-text">
-                        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="third-order-title">Technologies</h3>
-                    <p class="body-text">
-                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                    </p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h2 class="secondary-title visually-hidden">
+                    Team
+                </h2>
+                <ul class="advantages">
+                    <li class="list-item adv">
+                        <h3 class="third-order-title">Strategy</h3>
+                        <p class="body-text">
+                        Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li class="list-item adv">
+                        <h3 class="third-order-title">Punctuality</h3>
+                        <p class="body-text">
+                            Bring the key message to the brand's audience for the best price within the shortest possible time.
+                        </p>
+                    </li>
+                    <li class="list-item adv">
+                        <h3 class="third-order-title">Diligence</h3>
+                        <p class="body-text">
+                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                        </p>
+                    </li>
+                    <li class="list-item  adv">
+                        <h3 class="third-order-title">Technologies</h3>
+                        <p class="body-text">
+                            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="third-section">
-            <h2 class="secondary-title">Our Team</h2>
-            <ul>
-                <li class="bio-info">
-                    <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
-                    <h3 class="third-order-title">Mark Guerrero</h3>
-                    <p class="body-text">Product Designer</p>
-                </li>
-                <li class="bio-info">
-                    <img src="./images/tom.jpg" alt="Tom Ford" width="264">
-                    <h3 class="third-order-title">Tom Ford</h3>
-                    <p class="body-text">Frontend Developer</p>
-                </li>
-                <li class="bio-info">
-                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
-                    <h3 class="third-order-title">Camila Garcia</h3>
-                    <p class="body-text">Marketing</p>
-                </li>
-                <li class="bio-info">
-                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" >
-                    <h3 class="third-order-title">Daniel Wilson</h3>
-                    <p class="body-text">UI Designer</p>
-                </li>
-            </ul>
+        <section class="third-section section">
+            <div class="container">
+                <h2 class="secondary-title">Our Team</h2>
+                <ul>
+                    <li class="bio-info list-item">
+                        <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
+                        <h3 class="third-order-title">Mark Guerrero</h3>
+                        <p class="body-text">Product Designer</p>
+                    </li>
+                    <li class="bio-info list-item">
+                        <img src="./images/tom.jpg" alt="Tom Ford" width="264">
+                        <h3 class="third-order-title">Tom Ford</h3>
+                        <p class="body-text">Frontend Developer</p>
+                    </li>
+                    <li class="bio-info list-item">
+                        <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
+                        <h3 class="third-order-title">Camila Garcia</h3>
+                        <p class="body-text">Marketing</p>
+                    </li>
+                    <li class="bio-info list-item">
+                        <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" >
+                        <h3 class="third-order-title">Daniel Wilson</h3>
+                        <p class="body-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section>
-            <h2 class="secondary-title">Our Portfolio</h2>
-            <ul>
-                <li>
-                    <img src="./images/banking-app.jpg" alt="Banking App" width="360">
-                    <h3 class="third-order-title">Banking App</h3>
-                    <p class="body-text">App</p>
-                </li>
-                <li>
-                    <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="third-order-title">Cashless Payment</h3>
-                    <p class="body-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
-                    <h3 class="third-order-title">Meditation App</h3>
-                    <p class="body-text">App</p>
-                </li>
-                <li>
-                    <img src="./images/taxi-service.jpg" alt="Taxi Service"  width="360">
-                    <h3 class="third-order-title">Taxi Service</h3>
-                    <p class="body-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
-                    <h3 class="third-order-title">Screen Illustrations</h3>
-                    <p class="body-text">Design</p>
-                </li>
-                <li>
-                    <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
-                    <h3 class="third-order-title">Online Courses</h3>
-                    <p class="body-text">Marketing</p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h2 class="secondary-title">Our Portfolio</h2>
+                <ul>
+                    <li class="list-item">
+                        <img src="./images/banking-app.jpg" alt="Banking App" width="360">
+                        <h3 class="third-order-title">Banking App</h3>
+                        <p class="body-text">App</p>
+                    </li>
+                    <li class="list-item">
+                        <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                        <h3 class="third-order-title">Cashless Payment</h3>
+                        <p class="body-text">Marketing</p>
+                    </li>
+                    <li class="list-item">
+                        <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
+                        <h3 class="third-order-title">Meditation App</h3>
+                        <p class="body-text">App</p>
+                    </li>
+                    <li class="list-item">
+                        <img src="./images/taxi-service.jpg" alt="Taxi Service"  width="360">
+                        <h3 class="third-order-title">Taxi Service</h3>
+                        <p class="body-text">Marketing</p>
+                    </li>
+                    <li class="list-item">
+                        <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
+                        <h3 class="third-order-title">Screen Illustrations</h3>
+                        <p class="body-text">Design</p>
+                    </li>
+                    <li class="list-item">
+                        <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
+                        <h3 class="third-order-title">Online Courses</h3>
+                        <p class="body-text">Marketing</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="last-info">
-        <a class="logonav" href="./index.html">Web<span class="studio-footer">Studio</span></a>
-        <p class="body-text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container">
+            <a class="logonav" href="./index.html">Web<span class="studio-footer">Studio</span></a>
+            <p class="body-text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
-
 </body>
 </html>
