--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
         </div>
     </header>
     <main>
+        <!-- HERO -->
         <section class="hero-section section">
             <div class="container hero-content">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
                 <button class="order-cta" type="button">Order Service</button>
             </div>
         </section>
+        <!-- ADVANTAGES -->
         <section class="section">
             <div class="container">
                 <h2 class="secondary-title visually-hidden">
@@ -81,66 +83,92 @@
                 </ul>
             </div>
         </section>
+        <!-- TEAM -->
         <section class="third-section section">
             <div class="container">
                 <h2 class="secondary-title">Our Team</h2>
-                <ul>
+                <ul class="team-list">
                     <li class="bio-info list-item">
                         <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
-                        <h3 class="third-order-title">Mark Guerrero</h3>
-                        <p class="body-text">Product Designer</p>
+                        <div class="team-content">
+                            <h3 class="third-order-title">Mark Guerrero</h3>
+                            <p class="body-text">Product Designer</p>
+                        </div>
+
                     </li>
                     <li class="bio-info list-item">
                         <img src="./images/tom.jpg" alt="Tom Ford" width="264">
-                        <h3 class="third-order-title">Tom Ford</h3>
-                        <p class="body-text">Frontend Developer</p>
+                        <div class="team-content">
+                            <h3 class="third-order-title">Tom Ford</h3>
+                            <p class="body-text">Frontend Developer</p>
+                        </div>
+
                     </li>
                     <li class="bio-info list-item">
                         <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
-                        <h3 class="third-order-title">Camila Garcia</h3>
-                        <p class="body-text">Marketing</p>
+                        <div class="team-content">
+                            <h3 class="third-order-title">Camila Garcia</h3>
+                            <p class="body-text">Marketing</p>
+                        </div>
+                        
                     </li>
                     <li class="bio-info list-item">
                         <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" >
-                        <h3 class="third-order-title">Daniel Wilson</h3>
-                        <p class="body-text">UI Designer</p>
+                        <div class="team-content">
+                            <h3 class="third-order-title">Daniel Wilson</h3>
+                            <p class="body-text">UI Designer</p>
+                        </div>
+
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <!-- PORTFOLIO -->
+        <section class="section portfolio">
             <div class="container">
                 <h2 class="secondary-title">Our Portfolio</h2>
-                <ul>
-                    <li class="list-item">
+                <ul class="portfolio-list">
+                    <li class="list-item port-item">
                         <img src="./images/banking-app.jpg" alt="Banking App" width="360">
-                        <h3 class="third-order-title">Banking App</h3>
-                        <p class="body-text">App</p>
+                        <div class="portfolio-content">
+                            <h3 class="third-order-title">Banking App</h3>
+                            <p class="body-text">App</p>
+                        </div>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item port-item">
                         <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                        <h3 class="third-order-title">Cashless Payment</h3>
-                        <p class="body-text">Marketing</p>
+                        <div class="portfolio-content">
+                            <h3 class="third-order-title">Cashless Payment</h3>
+                            <p class="body-text">Marketing</p>
+                        </div>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item port-item">
                         <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
-                        <h3 class="third-order-title">Meditation App</h3>
-                        <p class="body-text">App</p>
+                        <div class="portfolio-content">
+                            <h3 class="third-order-title">Meditation App</h3>
+                            <p class="body-text">App</p>
+                        </div>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item port-item">
                         <img src="./images/taxi-service.jpg" alt="Taxi Service"  width="360">
-                        <h3 class="third-order-title">Taxi Service</h3>
-                        <p class="body-text">Marketing</p>
+                        <div class="portfolio-content">
+                            <h3 class="third-order-title">Taxi Service</h3>
+                            <p class="body-text">Marketing</p>
+                        </div>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item port-item">
                         <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
-                        <h3 class="third-order-title">Screen Illustrations</h3>
-                        <p class="body-text">Design</p>
+                        <div class="portfolio-content">
+                            <h3 class="third-order-title">Screen Illustrations</h3>
+                            <p class="body-text">Design</p>
+                        </div>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item port-item">
                         <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
-                        <h3 class="third-order-title">Online Courses</h3>
-                        <p class="body-text">Marketing</p>
+                        <div class="portfolio-content">
+                            <h3 class="third-order-title">Online Courses</h3>
+                            <p class="body-text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -148,7 +176,7 @@
     </main>
     <footer class="last-info">
         <div class="container">
-            <a class="logonav" href="./index.html">Web<span class="studio-footer">Studio</span></a>
+            <a class="logonav logo-bot" href="./index.html">Web<span class="studio-footer">Studio</span></a>
             <p class="body-text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
