--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- ADVANTAGES -->
         <section class="section">
             <div class="container">
-                <h2 class="secondary-title visually-hidden">
+                <h2 class="visually-hidden">
                     Team
                 </h2>
                 <ul class="advantages">
@@ -92,7 +92,7 @@
                         <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
                         <div class="team-content">
                             <h3 class="third-order-title">Mark Guerrero</h3>
-                            <p class="body-text">Product Designer</p>
+                            <p class="body-text description">Product Designer</p>
                         </div>
 
                     </li>
@@ -100,7 +100,7 @@
                         <img src="./images/tom.jpg" alt="Tom Ford" width="264">
                         <div class="team-content">
                             <h3 class="third-order-title">Tom Ford</h3>
-                            <p class="body-text">Frontend Developer</p>
+                            <p class="body-text description">Frontend Developer</p>
                         </div>
 
                     </li>
@@ -108,7 +108,7 @@
                         <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
                         <div class="team-content">
                             <h3 class="third-order-title">Camila Garcia</h3>
-                            <p class="body-text">Marketing</p>
+                            <p class="body-text description">Marketing</p>
                         </div>
                         
                     </li>
@@ -116,7 +116,7 @@
                         <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" >
                         <div class="team-content">
                             <h3 class="third-order-title">Daniel Wilson</h3>
-                            <p class="body-text">UI Designer</p>
+                            <p class="body-text description">UI Designer</p>
                         </div>
 
                     </li>
